--- a/tugas7.html
+++ b/tugas7.html
@@ -29,17 +29,19 @@
   </p>
 <br>
   <p>
-    Pelestarian gedung BI Kota sejalan dengan kebijakan Pemerintah DKI Jakarta yang mencanangkan daerah Kota Tua sebagai salah satu daerah bersejarah di Jakarta. Sebagai salah satu pelopor revitalisasi gedung-gedung bersejarah di Kota Tua, BI bermaksud menyajikan pengetahuan terkait peran BI dalam perjalanan sejarah bangsa, termasuk memaparkan latar belakang kebijakan BI yang diambil dari waktu ke waktu. Hal inilah yang menjadi pertimbangan munculnya gagasan pentingnya keberadaan Museum Bank Indonesia.
+    Museum Fatahillah terletak di Kota Tua Jakarta, Indonesia. Dahulu, bangunan ini merupakan Balai Kota Batavia pada masa pemerintahan Belanda. Kini, museum ini memamerkan sejarah Jakarta dengan koleksi artefak, lukisan, dan benda-benda bersejarah lainnya. <br>
+<br>
+    Diresmikan pada 24 Maret 1974, Museum Fatahillah mengambil nama dari pahlawan nasional, Fatahillah, yang merupakan komandan pasukan yang merebut kembali Jakarta dari penjajah Portugis pada tahun 1527. Bangunan ini mencerminkan arsitektur kolonial Belanda dengan nuansa neo-renaissance. Selain eksibisi sejarah, museum ini juga menarik dengan tata letaknya yang klasik dan taman di sekitarnya.
   </p>
     <!--menjelaskan tentang tujuan--> <!--karena ini perpoint jadi jangan lupa pakai css list-->
 <h3 id="A"> Tujuan</h3>
 <p>
-  Adapun tujuan dari pendirian dan pemeliharaan gedung BI Kota adalah sebagai berikut:
+  Adapun tujuan dari Museum Fatahillah yaitu:
 </p>
 <ol class="a"> 
-<li>Sarana Komunikasi Kebijakan BI : Museum BI memiliki fungsi untuk mensosialisakan berbagai kebijakan yang dikeluarkan BI sehingga masyarakat dapat lebih mudah mengetahui dan memahami kebijakan BI terkini. </li>
-<li>Tempat Mengumpulkan, Menyimpan, dan Merawat Benda Numismatik Ataupun Dokumen Bersejarah BI : Beragam bentuk benda numismatik ataupun dokumen yang bernilai sejarah dalam perjalanan bank sentral Indonesia akan dikelola dan disajikan secara lengkap dan runtut, sehingga mudah dipahami oleh berbagai lapisan masyarakat</li>
-<li>Sarana Rekreasi Literasi Yang Menghibur/Edutainment (Education-Entertainment) : Museum BI juga bertujuan sebagai sarana edukasi yang menghibur bagi masyarakat dengan menyediakan fasilitas pengetahuan kebanksentralan berbasis teknologi terkini. </li>
+<li> Menjaga dan melestarikan warisan sejarah Jakarta, terutama periode kolonial Belanda dan peristiwa sejarah penting lainnya. </li>
+<li> Memberikan pendidikan sejarah kepada masyarakat, terutama generasi muda, agar mereka memahami akar sejarah dan nilai-nilai budaya</li>
+<li> Menyediakan tempat rekreasi yang tidak hanya menghibur tetapi juga memberikan pengalaman edukatif seputar sejarah Jakarta</li>
 </ol>
 <!--visi misi dibikin pake css box model-->
 <h3 id="A">
@@ -48,17 +50,18 @@
 <div id="C">
   <h2>Visi</h2>
   <p class="visimisi">
-    Menjadi wahana sumber informasi tentang sejarah Bank Sentral Indonesia yang terpercaya, informatif, modern dan menarik yang dikelola secara profesional.
+    Menjadi Pusat Unggulan Pelestarian dan Pendidikan Sejarah, Menginspirasi Pemahaman yang Mendalam tentang Warisan Budaya Jakarta dan Perjalanan Perjuangan Bangsa."
   </p>
 
   <h2>Misi</h2>
   <p class="visimisi">
-    Menyediakan sarana edukasi kepada masyarakat secara menarik dengan memanfaatkan teknologi informasi yang tepat guna mengenai:
+    Melestarikan dan merawat artefak serta benda-benda bersejarah dengan standar konservasi tinggi.
+
   </p>
   <ul class="visimisi">
-    <li id="li">Fungsi dan peran Bank Indonesia dari waktu ke waktu</li>
-    <li id="li">Gedung cagar budaya milik Bank Indonesia dan benda-benda koleksi yang terkait dengan sejarah Bank Indonesia, termasuk pelestariannya</li>
-    <li id="li">Sejarah kebijakan Bank Sentral di bidang moneter, perbankan dan sistem pembayaran</li>
+    <li id="li">Berkolaborasi dengan lembaga budaya, pendidikan, dan pemerintah untuk mempromosikan kekayaan budaya Jakarta</li>
+    <li id="li">Terus mengembangkan koleksi dengan akuisisi benda-benda bersejarah yang bernilai tambah.</li>
+    <li id="li">Menyediakan pengalaman rekreasi bersejarah yang menarik dan informatif bagi pengunjung.</li>
   </ul>
 </div>
 
@@ -164,7 +167,6 @@
   </script>
  
 <ol class="a">
-  <li> .</li>
   <li> Sinema Fatahillah: menampilkan Film-film Dokumenter Zaman Batavia dan Film Populer Dalam Dan Luar Negeri.</li>
   <li> Perpustakaan Fatahillah: Bagi para pengunjung dapat memanfaatkan perpustakaan tersebut pada jam dan hari kerja Museum. Buku-buku tersebut sebagian besar peninggalan masa kolonial, dalam berbagai bahasa diantaranya bahasa Belanda, Melayu, Inggris dan Arab. .</li>
   <li> Ruang Pameran: Menyediakan ruangan yang representatif untuk kegiatan pertemuan, diskusi, seminar dan pameran dengan daya tampung lebih dari 150 orang..</li>
